Edit filter by multiple parameters